# raytracing

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: my_benchmark.rs
cpu_raytracing/: Cargo.toml
cpu_raytracing/src/: consts.rs  lib.rs  main.rs  material.rs  renderer.rs  scene.rs
cpu_raytracing/src/geometry/: aabb.rs  aabb_box.rs  moving_sphere.rs
cpu_raytracing/src/math/: color.rs  mod.rs  perlin.rs
gpu_raytracing/: Cargo.toml
gpu_raytracing/src/: lib.rs  main.rs
src/: camera.rs  consts.rs  geometry.rs  lib.rs  main.rs  material.rs  ray.rs  renderer.rs  scene.rs  texture.rs  vec3.rs
src/geometry/: aabb.rs  aabb_box.rs  bvh.rs  hit.rs  hittable_list.rs  hittable_world.rs  mod.rs  moving_sphere.rs  sphere.rs  xy_rectangle.rs  xz_rectangle.rs  yz_rectangle.rs
src/math/: color.rs  mod.rs  perlin.rs  utils.rs  vec3.rs
