[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]
#float-cmp = "0.9.0"
indicatif = "0.17.3"
png = "0.17.7"
rand = "0.8.5"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
strip = true
#lto = true
#codegen-units = 1
#panic = "abort"

# Disable rust bench because this project uses criterion
[lib]
bench = false

[[bin]]
name = "raytracing"
path = "src/main.rs"
bench = false
