[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]
human-time = "0.1"
indicatif = { version = "0.17", features = ["rayon"] }
png = "0.17"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.8"

[dependencies.glam]
version = "0.25"
features = ["fast-math", "core-simd"]

[dependencies.tracy_full]
version = "1.6"
# features = ["enable", "unstable"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Disable rust bench because this project uses criterion
[lib]
bench = false

[[bin]]
name = "cpu_raytracing"
path = "src/main.rs"
bench = false
